# tauri-windows-e2e-demo

./: README.md  bun.lockb  index.html  package.json
e2e/: Cargo.toml
e2e/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
